--- a/index.html
+++ b/index.html
@@ -31,20 +31,22 @@ p {
 
 <body>
   <div id="first"> 
-    <p>It took me 2 hours to figure out that i didnt have the px symbol in the first DIV after the height and width 
-      and that was why the boxes were not boxing rather they were rectangularing
-    Sometimes all you need is a brain that can scan quickly and mine is a bit bloody slow, 
+    <p>It took me 2 hours to figure out that i didnt have the px symbol in the first DIV of the CSS code, after the height 
+      and width which was why the boxes were not boxing rather they were rectangularing.
+    Sometimes all you need is a brain that can scan quickly and mine is bloody slow, 
     just don't ask me to do a speed typing test</p>
+
 </div> 
 <div id="second">
   <p>But you know what? I could still do a better job of running Greece than Mitsotakis and his nazi buddies, they have all the call centers of every wealthy country here paying us the pitiful minimum greek wage to do work that they have to pay 2 or 3 times the amount for in their own countries.</p>
 
 </div>
 <div id="third">
-  <p>I think it is what is very correctly called a bullshit job - they’re cults designed to eat your life; Multinationals hoard
-    your minutes jealously like dragons hoard gold. They keep inventing these jobs because of this false idea that everyone has to be
-    employed at some sort of drudgery! Why? well it's
-    Darwinian theory of course</p>
+  <p>and there are so many bullshit jobs - they’re like cults designed to eat our lives; Multinationals hoard
+    time like collecting gold. They keep inventing these jobs because of this false idea that everyone has to be
+    employed at some sort of drudgery! Why? well stupid ass patriarchy and its systemic darwinian power structural idiocy 
+    of course</p>
+
 
 </div>
 </body>
