--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ p {
 <div id="third">
   <p>and there are so many bullshit jobs - they’re like cults designed to eat our lives; Multinationals hoard
     time like collecting gold. They keep inventing these jobs because of this false idea that everyone has to be
-    employed at some sort of drudgery! Why? well stupid ass patriarchy and its systemic darwinian power structures</p>
+    employed at some sort of drudgery! Stupid ass men & patriarchy & heteronormativity</p>
 
 
 </div>
