--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@ p {
 
 </div> 
 <div id="second">
-  <p>But you know what? I could still do a better job of running Greece than Mitsotakis and his nazi buddies, they have all the call centers of every wealthy country here paying us the pitiful minimum greek wage to do work that they have to pay 2 or 3 times the amount for in their own countries.</p>
+  <p>But you know what? I could still do a better job of running Greece than Mitsotakis and his nazi buddies, 
+    they have all the call centers of every wealthy country here paying us the pitiful minimum greek wage 
+    to do work that they have to pay 2 or 3 times the amount for in their own countries.</p>
 
 </div>
 <div id="third">
   <p>and there are so many bullshit jobs - they’re like cults designed to eat our lives; Multinationals hoard
-    time like collecting gold. They keep inventing these jobs because of this false idea that everyone has to be
+    time like it's gold data. They keep inventing these jobs because of this false idea that everyone has to be
     employed at some sort of drudgery! Stupid ass men & patriarchy & heteronormativity</p>
 
 
