--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@ p {
 
 </div> 
 <div id="second">
-  <p>But you know what? I could still do a better job of running Greece than Mitsotakis and his nazi buddies, 
+  <p>But you know what? fvck Mitsotakis and his nazi men asshole buddies, 
     they have all the call centers of every wealthy country here paying us the pitiful minimum greek wage 
-    to do work that they have to pay 2 or 3 times the amount for in their own countries.</p>
+    to do work that they have to pay 2 or 3 times the amount for in their minted countries, sweatshop labour idelogies.</p>
 
 </div>
 <div id="third">
-  <p>and there are so many bullshit jobs - they’re like cults designed to eat our lives; Multinationals hoard
-    time like it's gold data. They keep inventing these jobs because of this false idea that everyone has to be
-    employed at some sort of drudgery! Stupid ass men & patriarchy & heteronormativity</p>
+  <p>and there are so many bullshit jobs -omg - they’re like cults designed to eat peoples lives; Multinationals hoard
+    labour like it's gold. They keep inventing these jobs because of this false idea that everyone will not know its a sweatshop job if they call it something else, well guess what assholes, it's all swaetshop! Stupid ass ugly men & knuckle dragging patriarchal  heteronormativity shit</p>
 
 
 </div>
