--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ p {
 </div>
 <div id="third">
   <p>and there are so many bullshit jobs -omg - they’re like cults designed to eat peoples lives; Multinationals hoard
-    labour like it's gold. They keep inventing these jobs because of this false idea that everyone will not know its a sweatshop job if they call it something else, well guess what assholes, it's all swaetshop! Stupid ass ugly men & knuckle dragging patriarchal  heteronormativity shit</p>
+    labour like it's gold. They think we will not know its a sweatshop job if they call it something else, well guess what assholes, it's all sweatshop! Stupid ass ugly knuckle dragging patriarchal heteronormativity shit!</p>
 
 
 </div>
