--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@ p {
 <div id="second">
   <p>But you know what? fvck Mitsotakis and his nazi men asshole buddies, 
     they have all the call centers of every wealthy country here paying us the pitiful minimum greek wage 
-    to do work that they have to pay 2 or 3 times the amount for in their minted countries, sweatshop labour idelogies.</p>
+    to do work that they have to pay 2 or 3 times the amount for in their minted countries, sweatshop labour ideologie$.</p>
 
 </div>
 <div id="third">
   <p>and there are so many bullshit jobs -omg - they’re like cults designed to eat peoples lives; Multinationals hoard
-    labour like it's gold. They think we will not know its a sweatshop job if they call it something else, well guess what assholes, it's all sweatshop! Stupid ass ugly knuckle dragging patriarchal heteronormativity shit!</p>
+    labour like it's gold. They think we will not know its a sweatshop job if they call it something else, well guess what assholes, it's all sweatshop! Stupid ass ugly knuckle dragging patriarchal heteronormativity!</p>
 
 
 </div>
